Continue addressing reviewer 1

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -118,7 +118,7 @@ grid.raster(img)
 
 <!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS3)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 68% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
 
-We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). Findings show that by 2030, the global average catch proportion of transboundary stocks that are projected to change beyond the EEZ’s historic proportion is 59% ± 17% (Fig. \@ref(fig:toeFigure4)A). Moreover,  85% (n = 239) of the world EEZs would have experienced changes in catch proportion of transboundary stocks by 2030. Changes in catch proportion are expected to become more common and intense slightly towards the mid -21st century at both the stock and EEZ level (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).
+We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). Findings show that by 2030, the global average catch proportion of transboundary stocks that are projected to change beyond the EEZ’s historic proportion is 59% ± 17% (Fig. \@ref(fig:toeFigure4)A). Moreover,  85% (n = 239) of the world EEZs would have experienced changes in catch proportion of transboundary stocks by 2030. **There will be an increase in the number of stocks changing their catch proportion and the number of EEZs with changing stocks towards the mid-21st century. Such increase will be followed by an also increase in the intensity of the proportion change (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**
 
 
 ```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
