--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -144,7 +144,7 @@ Our findings highlighting early shifts in the shared distribution of transbounda
 
 Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Such regions, like the Caribbean, are characterized by high levels of warming relative to natural internal variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively small EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting transboundary stocks.
 
-Management plans that are not designed to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Thus, focusing on these “hotspots” is key to anticipate a potential increase in fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments, which do not have to be monetary [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. For example, countries that are Party to the Nauru Agreement (PNA) manage their fisheries under a so-called Vessel Day Scheme, which accounts for shifts in stocks and catches, and is therefore somewhat anticipatory [@Aqorau:2018bh]. However, even strategies that take into consideration species’ shifts within the PNA area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Quota allocation methods based on a stock’s current distribution and/or on fixed-historical proportion need to evolve to be more agile [@Sumaila:2020tp; @PalaciosAbrantes:2020vt]. Fisheries based on historic participation could move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. However, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery. 
+**Management plans that are not designed to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Thus, focusing on these “hotspots” is key to anticipate a potential increase in fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments, which do not have to be monetary [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) that has a conservation fund that works as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States that manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt], and the Parties to the Nauru Agreement (PNA) in the Pacific Island States that manage skipjack tuna (*Katsuwonus pelamis*). The PNA manage their fisheries under a so-called Vessel Day Scheme, which accounts for shifts in stocks and catches, and is therefore somewhat anticipatory [@Aqorau:2018bh]. Quota allocation methods based on a stock’s current distribution and/or on fixed-historical proportion like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. However, even management plans that take into consideration such strategies might not be fully prepared for the consequences of shifting transboundary stocks [@Pinsky:2018cb; @Koubrak:2020hw; @Engler:2020bg]. For example species’ shifts within the PNA area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Moreover, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery they have historically been entitled. Finally, changes in policy can take years (e.g., it took the PST about 10 years to agree on a conservation fund) and sometimes, the time of political change is longer than that of species shifts [@Pinsky:2012kq].**
 
 **Potential drivers of shift and managing an uncertain future**
 
