included most of rev. 3 changes

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -62,7 +62,7 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 <!-- An opening sentence that states the question/problem addressed by the research AND Enough background content to give context to the study AND A brief statement of primary results AND A short concluding sentence. -->
 
-**Climate change is shifting the distribution of shared fish stocks between neighboring countries (transboundary).** The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that, by 2030, transboundary fish stocks are projected to shift their distributions across 78% of the world’s international boundaries. By 2100, 45% of stocks will have shifted for 81% of countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. Bi- and multi-lateral actions are urgently needed as lead-time for policy change is long.
+**Climate change is shifting the distribution of shared fish stocks between neighboring countries (transboundary).** The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that 78% the world’s international boundaries will experience a shifting transboundary stock by 2030. By 2100, 45% of stocks will have shifted for 81% of countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. Bi- and multi-lateral actions are urgently needed as lead-time for policy change is long.
 
 <!-- **One-Sentence Summary** -->
 
@@ -73,11 +73,11 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 **Main Text.**
 
-Most fisheries management is poorly adapted to address species’ shifting distributions as a result of changing ocean conditions. Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species **are shifting** their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
+Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species **are shifting** their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
 
 The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the UN's Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present in the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Under UNCLOS, countries are responsible for the management of stocks within their EEZs and encouraged to cooperate when stocks are shared  [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
 
-The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. Such patterns are expected to be exacerbated under continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the Sustainable Development Goals (SDG) under the UN 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
+Most fisheries management is poorly adapted to address species’ shifting distributions as a result of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon (Oncorhynchus sp.) jointly managed by Canada and the U.S. was heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Such patterns are expected to be exacerbated under continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the Sustainable Development Goals (SDG) under the UN 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
 Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth System Model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries under a high greenhouse gas emissions scenario (see Methods). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations and the intensity of this shift (i.e., time of emergence and stock share ratio; see Methods). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
@@ -93,7 +93,10 @@ grid.raster(img)
 ```
 
 
-The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and geographic region of the neighboring EEZs (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2 and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts. Stocks in countries such as Brazil and New Zealand are not projected to experience range shifts beyond natural variability (Fig. \@ref(fig:toeFigure2)A). On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of yearly fishing revenue from fisheries targeting such stocks within global EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and geographic region of the neighboring EEZs (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2 and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts. Stocks in countries such as Brazil and New Zealand are not projected to experience range shifts beyond natural variability (Fig. \@ref(fig:toeFigure2)A).
+
+On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of yearly fishing revenue from fisheries targeting **transboundary** stocks within global EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). **From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. $\pm$  22%) of the yearly revenue (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+
 
 ```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks.** A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. EEZs with no distributional shift between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represent the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
 
@@ -118,8 +121,7 @@ grid.raster(img)
 
 <!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS3)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 68% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
 
-We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). Findings show that by 2030, the global average catch proportion of transboundary stocks that are projected to change beyond the EEZ’s historic proportion is 59% ± 17% (Fig. \@ref(fig:toeFigure4)A). Moreover,  85% (n = 239) of the world EEZs would have experienced changes in catch proportion of transboundary stocks by 2030. **There will be an increase in the number of stocks changing their catch proportion and the number of EEZs with changing stocks towards the mid-21st century. Such increase will be followed by an also increase in the intensity of the proportion change (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**
-
+We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Findings show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks is projected to change beyond an EEZ’s historic proportion (i.e., between 2004 and 2010;** Fig. \@ref(fig:toeFigure4)A). Moreover,  85% (n = 239) of the world EEZs would have experienced changes in catch proportion of transboundary stocks by 2030. **There will be an increase in the number of stocks changing their catch proportion and the number of EEZs with changing stocks towards the mid-21st century. Such increase will be followed by an also increase in the intensity of the proportion change (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**
 
 ```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
 
